<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date"/>
    
    <LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal" >
    

    <EditText
        android:id="@+id/dEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10" 
        android:hint="@string/dhint">

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/dBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btntxt" 
        android:onClick="selectDate"/>

    </LinearLayout>

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    
    <LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal" >
    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time"/>

    <EditText
        android:id="@+id/TEdit"
        android:layout_width="111dp"
        android:layout_height="wrap_content"
        android:ems="10" 
        android:hint="@string/thint"/>
    </LinearLayout>

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal" >
    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mile" />

    <EditText
        android:id="@+id/MileEdit"
        android:layout_width="68dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/mhint" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exe" />

    <RadioGroup
        android:id="@+id/radioRate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        
    <RadioButton
        android:id="@+id/radioGreat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/great" />

    <RadioButton
        android:id="@+id/radioWell"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/well" />

    <RadioButton
        android:id="@+id/radioTough"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tough" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rye" />
	
	<RadioGroup
        android:id="@+id/radioActive"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
 
    <RadioButton
        android:id="@+id/radioWalk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/walk" />

    <RadioButton
        android:id="@+id/radioRun"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/run"/>

    <RadioButton
        android:id="@+id/radioBoth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/both"/>
    </RadioGroup>

	<TextView
	    android:id="@+id/textView6"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"/>

	<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal" >
    
	<Button
	    android:id="@+id/buttonCancel"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/cancelr" />

	<Button
	    android:id="@+id/buttonSaver"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text= "@string/saver" 
	    android:layout_marginLeft="50dp"/>
	</LinearLayout>

</LinearLayout>
